--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NYT_API_KEY="ENTER YOUR KEY HERE"
-TMDB_API_KEY="ENTER YOUR KEY HERE"
+NYT_API_KEY= lHGnvs1TRa2GVxQHT11dC3BkSoUnAQGw
+TMDB_API_KEY= f37c9103ee6d8fee93fb96c4bdce03ff
